add plantilla 2